# pypro4sail

./: .gitignore  CITATION.cff  CITATION.txt  MANIFEST.in  README.md  WHATSNEW.md  band_inversion_analysis.py  biophysical_example.py.txt  environment.yml  prosail_ML_inversion.ipynb  pyproject.toml  pyprosail_micasense_10bands.ipynb  requirements-intelex.txt  requirements.txt  sensitivity_analysis.py  setup.py  test_regressions.py
.github/workflows/: publish.yml
SoilSpectralLibrary/: ProSAIL_WetSoil.txt  jhu.becknic.soil.alfisol.haploxeralf.coarse.87P313.spectrum.txt  jhu.becknic.soil.aridisol.gypsiorthid.coarse.82P2695.spectrum.txt  jhu.becknic.soil.mollisol.agriudoll.coarse.87P757.spectrum.txt  jhu.becknic.soil.mollisol.cryoboroll.coarse.87P4453.spectrum.txt  jhu.becknic.soil.utisol.hapludult.coarse.87P707.spectrum.txt
docs/: CostFunctionsPROSPECT4SAIL.rst  FourSAIL.rst  FourSAILJacobian.rst  Prospect5.rst  Prospect5Jacobian.rst  README.md  cma.rst  conf.py  index.rst  make.bat  prosail_rtm.mmd  pyPro4SAIL.rst
inputs/: 20220708_almond_ripperdan_fl7_1329_10band.tif.aux.xml  20220708_almond_ripperdan_fl7_1329_10band_refl.tif
outputs/: micasense_10bands_ANT.tif  micasense_10bands_CAB.tif  micasense_10bands_CAR.tif  micasense_10bands_CBROWN.tif  micasense_10bands_CM.tif  micasense_10bands_CW.tif  micasense_10bands_LAI.tif  micasense_10bands_LAI.tif.aux.xml  micasense_10bands_LEAF_ANGLE.tif  test_output_ANT.tif  test_output_CAB.tif  test_output_CAR.tif  test_output_CBROWN.tif  test_output_CM.tif  test_output_CW.tif  test_output_LAI.tif  test_output_LAI.tif.aux.xml  test_output_LEAF_ANGLE.tif
pyPro4Sail/: CostFunctionsPROSPECT4SAIL.py  FourSAIL.py  FourSAILJacobian.py  ProspectD.py  ProspectDJacobian.py  ann_inversion.py  cost_functions.py  invertANN_ProSAIL.py  pyPro4SAIL.py  spectral_library.py
pypro4sail/: __init__.py  ann_inversion.py  cma.py  cost_functions.py  four_sail.py  four_sail_jacobian.py  machine_learning_regression.py  prospect.py  pypro4sail.py  radiation_helpers.py  spectral_library.py
pypro4sail/spectra/sensor_response_functions/: Landsat5.txt  PRISMA.txt  (+10 more)
src/: CostFunctionsPROSPECT4SAIL.py  FourSAIL.py  FourSAIL.py~  FourSAILJacobian.py  Prospect5.py  Prospect5Jacobian.py  pyPro4SAIL.py  testJacobians.py
src/SoilSpectralLibrary/: jhu.becknic.soil.alfisol.paleustalf.coarse.87P2376.spectrum.txt  jhu.becknic.soil.alfisol.paleustalf.coarse.87P2410.spectrum.txt  jhu.becknic.soil.aridisol.calciorthid.coarse.79P1536.spectrum.txt  jhu.becknic.soil.aridisol.camborthid.coarse.89P1772.spectrum.txt  jhu.becknic.soil.aridisol.haplargid.coarse.89P1793.spectrum.txt  jhu.becknic.soil.aridisol.salorthid.coarse.79P1530.spectrum.txt  jhu.becknic.soil.inceptisol.haplumbrept.coarse.86P4561.spectrum.txt  jhu.becknic.soil.inceptisol.plaggept.coarse.85P3707.spectrum.txt  jhu.becknic.soil.mollisol.agialboll.coarse.85P5339.spectrum.txt  jhu.becknic.soil.mollisol.argiustoll.coarse.90P128s.spectrum.txt  jhu.becknic.soil.mollisol.haplaquoll.coarse.86P4603.spectrum.txt
test/: Comparison_FortranVsPython.ods  testJacobians.py  test_PROSAIL.ods
utils/: calibrate_fipar.py  create_srf.py  generate_soil_database.py
(+25 files in other folders)
